# MyTorch

./: .gitignore  CLAUDE.md  README.md  demo.py  model_checkpoint.pkl  pyproject.toml
examples/: cnn.py  dnn.py  rnn.py
mytorch/: __init__.py  functional.py  tensor.py
mytorch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mytorch/data/: __init__.py  dataloader.py  dataset.py
mytorch/nn/: __init__.py  activation.py  attention.py  conv.py  dropout.py  embedding.py  linear.py  modules.py  normalization.py  pooling.py  rnn.py  transformer.py
mytorch/optim/: __init__.py  adam.py  adamw.py  lr_scheduler.py  rmsprop.py  sgd.py
mytorch/utils/: __init__.py  clip_grad.py  early_stopping.py  metrics.py  model_utils.py
nn_scratch/: dense.py  mlp.py  neuron.py  project.py
notebook/: 1.first.ipynb
tests/: test_nn.py  test_tensor.py
